# movie-review

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
movie_review/frontend/: main.py  style.css
tests/: test_movie_review.py
