[tool.poetry]
name = "movie-review"
version = "0.1.0"
description = ""
authors = ["Igor Souza <igormcsouza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.72.0"
nltk = "^3.5"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
notebook = "^6.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
